--- a/ui/dialogs/songedit.ui
+++ b/ui/dialogs/songedit.ui
@@ -17,11 +17,127 @@
    <bool>true</bool>
   </property>
   <layout class="QGridLayout" name="mainLayout">
-   <item row="5" column="0">
-    <widget class="QDialogButtonBox" name="buttonBox">
-     <property name="standardButtons">
-      <set>QDialogButtonBox::StandardButton::Cancel|QDialogButtonBox::StandardButton::Ok</set>
+   <item row="1" column="0" colspan="2">
+    <widget class="QGroupBox" name="horizontalGroupBox">
+     <property name="font">
+      <font>
+       <bold>true</bold>
+      </font>
      </property>
+     <property name="title">
+      <string>Location</string>
+     </property>
+     <layout class="QHBoxLayout" name="fileNameLayout">
+      <property name="topMargin">
+       <number>1</number>
+      </property>
+      <item>
+       <widget class="QLabel" name="fileNameLabel">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="font">
+         <font>
+          <bold>true</bold>
+         </font>
+        </property>
+        <property name="text">
+         <string>File Name:</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignmentFlag::AlignRight|Qt::AlignmentFlag::AlignTrailing|Qt::AlignmentFlag::AlignVCenter</set>
+        </property>
+        <property name="buddy">
+         <cstring>fileNameEdit</cstring>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="fileNameEdit">
+        <property name="readOnly">
+         <bool>true</bool>
+        </property>
+        <property name="placeholderText">
+         <string>The selected track is displayed here.</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="fileBrowseButton">
+        <property name="toolTip">
+         <string>Browse File for Song</string>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+        <property name="icon">
+         <iconset resource="../../resources.qrc">
+          <normaloff>:/images/dialogs/browse.png</normaloff>:/images/dialogs/browse.png</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>32</width>
+          <height>32</height>
+         </size>
+        </property>
+        <property name="flat">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="playbackButton">
+        <property name="toolTip">
+         <string>Play</string>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+        <property name="icon">
+         <iconset resource="../../resources.qrc">
+          <normaloff>:/images/player/play.png</normaloff>:/images/player/play.png</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>30</width>
+          <height>30</height>
+         </size>
+        </property>
+        <property name="shortcut">
+         <string>Ctrl+S</string>
+        </property>
+        <property name="flat">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="initializeButton">
+        <property name="toolTip">
+         <string>Initialize using the media meta data</string>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+        <property name="icon">
+         <iconset resource="../../resources.qrc">
+          <normaloff>:/images/dialogs/Initialize.png</normaloff>:/images/dialogs/Initialize.png</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>30</width>
+          <height>30</height>
+         </size>
+        </property>
+        <property name="flat">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </widget>
    </item>
    <item row="4" column="0" colspan="2">
@@ -189,104 +305,11 @@
      </layout>
     </widget>
    </item>
-   <item row="1" column="0" colspan="2">
-    <widget class="QGroupBox" name="horizontalGroupBox">
-     <property name="font">
-      <font>
-       <bold>true</bold>
-      </font>
+   <item row="6" column="0">
+    <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="standardButtons">
+      <set>QDialogButtonBox::StandardButton::Cancel|QDialogButtonBox::StandardButton::Ok</set>
      </property>
-     <property name="title">
-      <string>Location</string>
-     </property>
-     <layout class="QHBoxLayout" name="fileNameLayout">
-      <property name="topMargin">
-       <number>1</number>
-      </property>
-      <item>
-       <widget class="QLabel" name="fileNameLabel">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="font">
-         <font>
-          <bold>true</bold>
-         </font>
-        </property>
-        <property name="text">
-         <string>File Name:</string>
-        </property>
-        <property name="alignment">
-         <set>Qt::AlignmentFlag::AlignRight|Qt::AlignmentFlag::AlignTrailing|Qt::AlignmentFlag::AlignVCenter</set>
-        </property>
-        <property name="buddy">
-         <cstring>fileNameEdit</cstring>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLineEdit" name="fileNameEdit">
-        <property name="readOnly">
-         <bool>true</bool>
-        </property>
-        <property name="placeholderText">
-         <string>The selected track is displayed here.</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QPushButton" name="fileBrowseButton">
-        <property name="toolTip">
-         <string>Browse File for Song</string>
-        </property>
-        <property name="text">
-         <string/>
-        </property>
-        <property name="icon">
-         <iconset resource="../../resources.qrc">
-          <normaloff>:/images/dialogs/browse.png</normaloff>:/images/dialogs/browse.png</iconset>
-        </property>
-        <property name="iconSize">
-         <size>
-          <width>32</width>
-          <height>32</height>
-         </size>
-        </property>
-        <property name="flat">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QPushButton" name="playbackButton">
-        <property name="toolTip">
-         <string>Play</string>
-        </property>
-        <property name="text">
-         <string/>
-        </property>
-        <property name="icon">
-         <iconset resource="../../resources.qrc">
-          <normaloff>:/images/player/play.png</normaloff>:/images/player/play.png</iconset>
-        </property>
-        <property name="iconSize">
-         <size>
-          <width>30</width>
-          <height>30</height>
-         </size>
-        </property>
-        <property name="shortcut">
-         <string>Ctrl+S</string>
-        </property>
-        <property name="flat">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-     </layout>
     </widget>
    </item>
    <item row="2" column="0" colspan="2">
@@ -390,8 +413,8 @@
    <slot>openSongFile()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>416</x>
-     <y>51</y>
+     <x>405</x>
+     <y>73</y>
     </hint>
     <hint type="destinationlabel">
      <x>510</x>
@@ -406,8 +429,8 @@
    <slot>controlPlayback()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>479</x>
-     <y>49</y>
+     <x>455</x>
+     <y>72</y>
     </hint>
     <hint type="destinationlabel">
      <x>523</x>
@@ -479,6 +502,22 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>initializeButton</sender>
+   <signal>clicked()</signal>
+   <receiver>SongEdit</receiver>
+   <slot>updateMetaData()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>482</x>
+     <y>46</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>523</x>
+     <y>57</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <signal>nameChanged(QString)</signal>
@@ -490,5 +529,6 @@
   <slot>controlPlayback()</slot>
   <slot>openImageFile()</slot>
   <slot>removeCover()</slot>
+  <slot>updateMetaData()</slot>
  </slots>
 </ui>
