--- a/ui/dialogs/playlistedit.ui
+++ b/ui/dialogs/playlistedit.ui
@@ -55,6 +55,19 @@
    <item>
     <layout class="QHBoxLayout" name="controlLayout">
      <item>
+      <spacer name="leftSpacer">
+       <property name="orientation">
+        <enum>Qt::Orientation::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
       <widget class="QPushButton" name="addButton">
        <property name="toolTip">
         <string>Add</string>
@@ -104,7 +117,7 @@
       </widget>
      </item>
      <item>
-      <spacer name="leftSpacer">
+      <spacer name="rightSpacer">
        <property name="orientation">
         <enum>Qt::Orientation::Horizontal</enum>
        </property>
@@ -116,30 +129,14 @@
        </property>
       </spacer>
      </item>
-     <item>
-      <widget class="QPushButton" name="playButton">
-       <property name="toolTip">
-        <string>Play</string>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-       <property name="icon">
-        <iconset resource="../../resources.qrc">
-         <normaloff>:/images/player/play.png</normaloff>:/images/player/play.png</iconset>
-       </property>
-       <property name="iconSize">
-        <size>
-         <width>32</width>
-         <height>32</height>
-        </size>
-       </property>
-       <property name="flat">
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
     </layout>
+   </item>
+   <item>
+    <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="standardButtons">
+      <set>QDialogButtonBox::StandardButton::Cancel|QDialogButtonBox::StandardButton::Ok</set>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
@@ -154,8 +151,8 @@
    <slot>addSong()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>56</x>
-     <y>680</y>
+     <x>353</x>
+     <y>644</y>
     </hint>
     <hint type="destinationlabel">
      <x>97</x>
@@ -170,8 +167,8 @@
    <slot>removeSong()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>108</x>
-     <y>680</y>
+     <x>405</x>
+     <y>644</y>
     </hint>
     <hint type="destinationlabel">
      <x>274</x>
@@ -196,18 +193,34 @@
    </hints>
   </connection>
   <connection>
-   <sender>playButton</sender>
-   <signal>clicked()</signal>
+   <sender>buttonBox</sender>
+   <signal>accepted()</signal>
    <receiver>PlaylistEdit</receiver>
-   <slot>playSong()</slot>
+   <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>701</x>
-     <y>680</y>
+     <x>529</x>
+     <y>669</y>
     </hint>
     <hint type="destinationlabel">
-     <x>208</x>
-     <y>600</y>
+     <x>478</x>
+     <y>692</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>buttonBox</sender>
+   <signal>rejected()</signal>
+   <receiver>PlaylistEdit</receiver>
+   <slot>reject()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>659</x>
+     <y>677</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>708</x>
+     <y>635</y>
     </hint>
    </hints>
   </connection>
