Added some indicators to the editor

--- a/ui/dialogs/playlistedit.ui
+++ b/ui/dialogs/playlistedit.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>714</width>
-    <height>693</height>
+    <width>867</width>
+    <height>770</height>
    </rect>
   </property>
   <property name="font">
@@ -22,8 +22,8 @@
   <property name="modal">
    <bool>true</bool>
   </property>
-  <layout class="QVBoxLayout" name="mainLayout">
-   <item>
+  <layout class="QGridLayout" name="gridLayout">
+   <item row="0" column="1" colspan="2">
     <widget class="QLineEdit" name="nameEdit">
      <property name="text">
       <string/>
@@ -33,7 +33,27 @@
      </property>
     </widget>
    </item>
-   <item>
+   <item row="3" column="2">
+    <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="standardButtons">
+      <set>QDialogButtonBox::StandardButton::Cancel|QDialogButtonBox::StandardButton::Ok</set>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="0">
+    <widget class="QLabel" name="nameLabel">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="text">
+      <string>Name:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="0" colspan="3">
     <widget class="QListView" name="songView">
      <property name="frameShape">
       <enum>QFrame::Shape::Panel</enum>
@@ -52,7 +72,7 @@
      </property>
     </widget>
    </item>
-   <item>
+   <item row="2" column="0" colspan="3">
     <layout class="QHBoxLayout" name="controlLayout">
      <item>
       <spacer name="leftSpacer">
@@ -131,10 +151,16 @@
      </item>
     </layout>
    </item>
-   <item>
-    <widget class="QDialogButtonBox" name="buttonBox">
-     <property name="standardButtons">
-      <set>QDialogButtonBox::StandardButton::Cancel|QDialogButtonBox::StandardButton::Ok</set>
+   <item row="3" column="0" colspan="2">
+    <widget class="QLabel" name="waitLabel">
+     <property name="font">
+      <font>
+       <pointsize>9</pointsize>
+       <bold>false</bold>
+      </font>
+     </property>
+     <property name="text">
+      <string>Please wait to make changes. This operation may take some time to complete.</string>
      </property>
     </widget>
    </item>
