Fixed a bug in the playlist player

--- a/ui/dialogs/playlistplayer.ui
+++ b/ui/dialogs/playlistplayer.ui
@@ -92,7 +92,7 @@
       <enum>Qt::ScrollBarPolicy::ScrollBarAlwaysOff</enum>
      </property>
      <property name="sizeAdjustPolicy">
-      <enum>QAbstractScrollArea::SizeAdjustPolicy::AdjustToContentsOnFirstShow</enum>
+      <enum>QAbstractScrollArea::SizeAdjustPolicy::AdjustIgnored</enum>
      </property>
     </widget>
    </item>
