--- a/ui/dialogs/artistedit.ui
+++ b/ui/dialogs/artistedit.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>751</width>
-    <height>837</height>
+    <width>647</width>
+    <height>852</height>
    </rect>
   </property>
   <property name="font">
@@ -21,130 +21,192 @@
   <property name="styleSheet">
    <string notr="true">background-color:white</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout">
-   <item row="1" column="1" colspan="2">
-    <widget class="QTextEdit" name="biographyEdit">
-     <property name="frameShape">
-      <enum>QFrame::Shape::WinPanel</enum>
+  <layout class="QVBoxLayout" name="verticalLayout_3">
+   <item>
+    <widget class="QTabWidget" name="tabWidget">
+     <property name="font">
+      <font>
+       <bold>false</bold>
+      </font>
      </property>
-     <property name="frameShadow">
-      <enum>QFrame::Shadow::Plain</enum>
+     <property name="tabShape">
+      <enum>QTabWidget::TabShape::Rounded</enum>
      </property>
-     <property name="placeholderText">
-      <string>Type the biography here...</string>
-     </property>
-    </widget>
-   </item>
-   <item row="4" column="0" colspan="3">
-    <layout class="QHBoxLayout" name="controlLayout">
-     <property name="topMargin">
+     <property name="currentIndex">
       <number>0</number>
      </property>
-     <item>
-      <spacer name="leftSpacer">
-       <property name="orientation">
-        <enum>Qt::Orientation::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
-      <widget class="QPushButton" name="addButton">
-       <property name="text">
-        <string/>
-       </property>
-       <property name="icon">
-        <iconset resource="../../resources.qrc">
-         <normaloff>:/images/dialogs/add.png</normaloff>:/images/dialogs/add.png</iconset>
-       </property>
-       <property name="iconSize">
-        <size>
-         <width>32</width>
-         <height>32</height>
-        </size>
-       </property>
-       <property name="flat">
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="removeButton">
-       <property name="enabled">
-        <bool>true</bool>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-       <property name="icon">
-        <iconset resource="../../resources.qrc">
-         <normaloff>:/images/dialogs/delete.png</normaloff>:/images/dialogs/delete.png</iconset>
-       </property>
-       <property name="iconSize">
-        <size>
-         <width>32</width>
-         <height>32</height>
-        </size>
-       </property>
-       <property name="flat">
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <spacer name="rightSpacer">
-       <property name="orientation">
-        <enum>Qt::Orientation::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-    </layout>
-   </item>
-   <item row="0" column="1" colspan="2">
-    <widget class="QLineEdit" name="nameEdit">
-     <property name="text">
-      <string/>
+     <property name="elideMode">
+      <enum>Qt::TextElideMode::ElideNone</enum>
      </property>
-     <property name="placeholderText">
-      <string>Type the artist's name here</string>
+     <property name="usesScrollButtons">
+      <bool>true</bool>
      </property>
+     <property name="documentMode">
+      <bool>false</bool>
+     </property>
+     <property name="tabBarAutoHide">
+      <bool>true</bool>
+     </property>
+     <widget class="QWidget" name="infoWidget">
+      <attribute name="title">
+       <string>Information</string>
+      </attribute>
+      <layout class="QVBoxLayout" name="infoLayout">
+       <item>
+        <widget class="QLineEdit" name="nameEdit">
+         <property name="font">
+          <font>
+           <bold>false</bold>
+          </font>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+         <property name="placeholderText">
+          <string>Type the artist's name here</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="ImageView" name="photoView" native="true">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="font">
+          <font>
+           <bold>false</bold>
+          </font>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QTextEdit" name="biographyEdit">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="font">
+          <font>
+           <bold>false</bold>
+          </font>
+         </property>
+         <property name="frameShape">
+          <enum>QFrame::Shape::WinPanel</enum>
+         </property>
+         <property name="frameShadow">
+          <enum>QFrame::Shadow::Plain</enum>
+         </property>
+         <property name="placeholderText">
+          <string>Type the biography here...</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QWidget" name="playlistWidget">
+      <attribute name="title">
+       <string>Playlists</string>
+      </attribute>
+      <layout class="QVBoxLayout" name="playlistLayout">
+       <item>
+        <widget class="QListView" name="playlistView">
+         <property name="frameShape">
+          <enum>QFrame::Shape::WinPanel</enum>
+         </property>
+         <property name="frameShadow">
+          <enum>QFrame::Shadow::Plain</enum>
+         </property>
+         <property name="selectionMode">
+          <enum>QAbstractItemView::SelectionMode::ExtendedSelection</enum>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <layout class="QHBoxLayout" name="controlLayout">
+         <property name="topMargin">
+          <number>0</number>
+         </property>
+         <item>
+          <spacer name="leftSpacer">
+           <property name="orientation">
+            <enum>Qt::Orientation::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item>
+          <widget class="QPushButton" name="addButton">
+           <property name="text">
+            <string/>
+           </property>
+           <property name="icon">
+            <iconset resource="../../resources.qrc">
+             <normaloff>:/images/dialogs/add.png</normaloff>:/images/dialogs/add.png</iconset>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>32</width>
+             <height>32</height>
+            </size>
+           </property>
+           <property name="flat">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="removeButton">
+           <property name="enabled">
+            <bool>true</bool>
+           </property>
+           <property name="text">
+            <string/>
+           </property>
+           <property name="icon">
+            <iconset resource="../../resources.qrc">
+             <normaloff>:/images/dialogs/delete.png</normaloff>:/images/dialogs/delete.png</iconset>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>32</width>
+             <height>32</height>
+            </size>
+           </property>
+           <property name="flat">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <spacer name="rightSpacer">
+           <property name="orientation">
+            <enum>Qt::Orientation::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+        </layout>
+       </item>
+      </layout>
+     </widget>
     </widget>
    </item>
-   <item row="0" column="0" rowspan="3">
-    <widget class="ImageView" name="photoView" native="true">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="0" colspan="3">
-    <widget class="QListView" name="playlistView">
-     <property name="frameShape">
-      <enum>QFrame::Shape::WinPanel</enum>
-     </property>
-     <property name="frameShadow">
-      <enum>QFrame::Shadow::Plain</enum>
-     </property>
-     <property name="selectionMode">
-      <enum>QAbstractItemView::SelectionMode::ExtendedSelection</enum>
-     </property>
-    </widget>
-   </item>
-   <item row="5" column="0" colspan="3">
+   <item>
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="standardButtons">
       <set>QDialogButtonBox::StandardButton::Cancel|QDialogButtonBox::StandardButton::Ok</set>
@@ -169,18 +231,34 @@
  </resources>
  <connections>
   <connection>
-   <sender>playlistView</sender>
-   <signal>activated(QModelIndex)</signal>
+   <sender>buttonBox</sender>
+   <signal>accepted()</signal>
    <receiver>ArtistEdit</receiver>
-   <slot>editPlaylist(QModelIndex)</slot>
+   <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>486</x>
-     <y>458</y>
+     <x>483</x>
+     <y>826</y>
     </hint>
     <hint type="destinationlabel">
-     <x>750</x>
-     <y>435</y>
+     <x>401</x>
+     <y>849</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>buttonBox</sender>
+   <signal>rejected()</signal>
+   <receiver>ArtistEdit</receiver>
+   <slot>reject()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>593</x>
+     <y>829</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>627</x>
+     <y>847</y>
     </hint>
    </hints>
   </connection>
@@ -191,12 +269,12 @@
    <slot>addPlaylist()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>371</x>
-     <y>824</y>
+     <x>297</x>
+     <y>767</y>
     </hint>
     <hint type="destinationlabel">
-     <x>291</x>
-     <y>766</y>
+     <x>165</x>
+     <y>859</y>
     </hint>
    </hints>
   </connection>
@@ -207,12 +285,28 @@
    <slot>removePlaylist()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>423</x>
-     <y>824</y>
+     <x>350</x>
+     <y>757</y>
     </hint>
     <hint type="destinationlabel">
-     <x>635</x>
-     <y>729</y>
+     <x>7</x>
+     <y>846</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>playlistView</sender>
+   <signal>activated(QModelIndex)</signal>
+   <receiver>ArtistEdit</receiver>
+   <slot>editPlaylist(QModelIndex)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>359</x>
+     <y>277</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>655</x>
+     <y>98</y>
     </hint>
    </hints>
   </connection>
