Enabled the ability to accept drops

--- a/ui/dialogs/songedit.ui
+++ b/ui/dialogs/songedit.ui
@@ -323,6 +323,9 @@
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
+     <property name="acceptDrops">
+      <bool>true</bool>
+     </property>
     </widget>
    </item>
    <item row="3" column="0">
