--- a/ui/dialogs/artistedit.ui
+++ b/ui/dialogs/artistedit.ui
@@ -80,6 +80,9 @@
            <bold>false</bold>
           </font>
          </property>
+         <property name="acceptDrops">
+          <bool>true</bool>
+         </property>
         </widget>
        </item>
        <item>
